# waxtree

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  waxtree.db3
src/app/: main.cpp  wtapp.cpp
src/app/include/: wtapp.hpp
src/core/: main.cpp  wtdb.cpp
src/core/include/: wtdb.hpp  wtschema.hpp
